# android-stream-manager-2

./: .gitignore  ANALISE_SISTEMA_COMPLETA.md  CMakeLists.txt  DOCUMENTACAO_TECNICA.md  Makefile  README.md  README_STREAMING.md  ambiente.sh  base64.cpp  base64.h  ci-build.yml  hosting.yaml  install.sh  test_dashboard.cpp  test_main.cpp  test_streaming.cpp  tutorial-install-linux.sh  tutorial.txt  ubuntu.txt
android-client-template/: settings.gradle
android-client-template/app/: build.gradle
android-client-template/app/src/main/: AndroidManifest.xml
android-client-template/app/src/main/java/com/streammanager/client/: AppMonitorService.java  MainActivity.java  NetworkManager.java  ScreenLockActivity.java  ScreenLockService.java  StreamingApplication.java  StreamingService.java
android-client-template/app/src/main/res/drawable/: device_info_background.xml  lock_background.xml  lock_button_background.xml  log_background.xml  remote_control_indicator.xml
android-client-template/app/src/main/res/layout/: activity_main.xml  activity_screen_lock.xml
android-client-template/app/src/main/res/values/: strings.xml  styles.xml
android-client-template/app/src/main/res/xml/: network_security_config.xml
builder/: apk_generator.cpp  main.cpp
compliance/: compliance_manager.cpp  compliance_manager.h
config/: system_config.json
core/: apk_builder.cpp  apk_builder.h  device_manager.cpp  device_manager.h  system_manager.cpp  system_manager.h
dashboard/: apk_config_widget.cpp  apk_config_widget.h  app_monitoring_widget.cpp  app_monitoring_widget.h  main.cpp  main_window.cpp  main_window.h  monitoring_widget.cpp  monitoring_widget.h  resources.qrc  streaming_viewer.cpp  streaming_viewer.h
database/: database_manager.cpp  database_manager.h  install.sh
monitoring/: alerts_manager.cpp  alerts_manager.h  health_checker.cpp  health_checker.h  metrics_collector.cpp  metrics_collector.h  prometheus_exporter.cpp  prometheus_exporter.h
optimization/: build_cache.cpp  build_cache.h  stream_optimizer.cpp  stream_optimizer.h  thread_pool.cpp  thread_pool.h
scripts/: android-stream-manager.service  create_template.sh  init_system.sh  test_system.sh
security/: apk_signer.cpp  apk_signer.h  jwt_manager.cpp  jwt_manager.h  tls_manager.cpp  tls_manager.h
server/: http_server.cpp  http_server.h  main.cpp  stream_server.cpp  stream_server.h  websocket_session.cpp  websocket_session.h
shared/: apk_config.h  protocol.cpp  protocol.h
